<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Enter the First Number">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/firstNumLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstNumLabel"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/firstNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enterNumHintStr"
            android:inputType="numberDecimal"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/secondNumLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secondNumLabelStr"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/secondNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/secondNumStr"
            android:inputType="numberDecimal"
            android:textSize="24sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="performAddition"
                android:text="@string/addButtonStr"
                app:layout_constraintEnd_toStartOf="@+id/subtractButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/subtractButton" />

            <Button
                android:id="@+id/subtractButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="performSubtraction"
                android:text="@string/subButtonStr"
                app:layout_constraintEnd_toStartOf="@+id/multButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/addButton"
                app:layout_constraintTop_toTopOf="@+id/multButton" />

            <Button
                android:id="@+id/multButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="performMultiplication"
                android:text="@string/multButtonStr"
                app:layout_constraintEnd_toStartOf="@+id/divButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/subtractButton"
                app:layout_constraintTop_toTopOf="@+id/divButton" />

            <Button
                android:id="@+id/divButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="performDivision"
                android:text="@string/divButtonStr"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/multButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/answerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answerStr"
            android:textSize="24sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>